# vrc-social-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml  mergify.yml
.github/workflows/: bump-version.yml  pr-check.yml  publish.yml  release-pr.yml
design/: ui-design.pen
scripts/: collect-licenses.js  generate-changelog.js  lint.js
src/: App.tsx  bindings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  structs.rs
src/components/: friendDetailDialog.tsx  toast.tsx
src/components/ui/: Sidebar.tsx  avatar.tsx  card.tsx  input.tsx  instance.tsx
src/components/ui/dialogs/: confirm.tsx  friendDetail.tsx  instanceDetail.tsx  license.tsx  login.tsx  updateConfirm.tsx
src/libs/: dayjsToolbox.tsx  exportInterfaces.tsx  i18n.tsx  logging.tsx  markdownviewer.tsx  userDataStore.ts
src/locales/: en.json  ja.json
src/screens/: debugScreen.tsx  friendScreen.tsx  settingsScreen.tsx
